chore: restructured code with some config changes