@@ -1,4 +1,5 @@
 package dev.ggorantala.streamsapi.streamsapi.functionalprogramming.declarative;
+
 /*
  * This code is part of the course "Master Java 8(11/17) Functional Programming With Lambdas And Streams API"
  * for https://ggorantala.dev.
@@ -15,14 +16,14 @@ import java.util.List;
 
 public class RemoveDuplicates {
 
-    public static void main(String[] args) {
-        List<Integer> uniqueValues =
-            Constants.DUPLICATE_INTEGER_LIST // collections data
-                .stream() // converting into Stream of integers
-                .distinct()
-                // .collect(Collectors.toList()); // or you can use `.toList();`
-                .toList(); // or you can use `.toList();`
+  public static void main(String[] args) {
+    List<Integer> uniqueValues =
+        Constants.DUPLICATE_INTEGER_LIST // collections data
+            .stream() // converting into Stream of integers
+            .distinct()
+            // .collect(Collectors.toList()); // or you can use `.toList();`
+            .toList(); // or you can use `.toList();`
 
-        System.out.println("Unique elements are: " + uniqueValues);
-    }
+    System.out.println("Unique elements are: " + uniqueValues);
+  }
 }
